--- a/css/index.css
+++ b/css/index.css
@@ -4,150 +4,102 @@
   padding: 0;
 }
 
-html {
-  background-color: #4d3e3e;
+html, body {
   color: #fff3cd;
   font-family: 'Jost', sans-serif;
-  font-size: 10px;
+  background: url(../img/coffee-beans.jpg) no-repeat center center /cover;
 }
 
 a {
   text-decoration: none;
+  color: #fff3cd;
+}
+
+h1 {
+  color: #000
+}
+
+h2, h3 {
+  color: #ff926b;
 }
 
 h2 {
-  color: #ff926b;
-  font-size: 4rem;
+  font-size: 3rem;
   padding: 30px 0;
+  
 }
 
 h3 {
-  font-size: 2rem;
-  letter-spacing: 2px;
+  text-align: center;
+  color: #000;
 }
 
-h4 {
-  padding: 10px;
-  font-size: 1.2rem;
+img {
+  width: 50%;
 }
 
-.air {
-  
-  height: 60%;
-}
-
-.brewed {
-  height: 60%;
-  background-image: linear-gradient(#381F02, #6A4B26 );
-}
-
-.chocolate {
-  height: 30%;
-  background-image: linear-gradient(#4A4034, #381F02 );
-}
-
-.espresso {
-  background-color: #2D2008;
-  height: 40%;
-}
-
-.foamed-milk {
-  height: 40%;
-  background-color: #CCB48A;
-}
-
-.half {
-  background-image: linear-gradient(#F2A249, #3B2710 );
-  height: 60%
-}
-
-.hot-milk {
-  background-image: linear-gradient(#E9827C, #5C3330 );
-}
-
-.steamed-milk {
-  background-image: linear-gradient(#D1CAA7, #A17326 );
-  height: 60%;
-  color: #2D2008;
-}
-
-.water {
-  background-color: #fff3cd;
-  height: 60%;
-  color: #2D2008;
-}
-
-.whipped-cream {
-  height: 60%;
-  background-image: linear-gradient(#EFEACA, #F2A593);
-  color: #2D2008;
+ul {
+  list-style: none;
 }
 
 /* Utilities */
 .container {
   margin: auto;
-  width: 1200px;
+  width: 1500px;
 }
 
-.flex-container {
+.chapter-core {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
-.item {
-  margin: 20px;
-  padding: 20px;
-  border-radius: 10px;
-  border: 2px solid #fff3cd;
-  flex: 1;
+.chapter-text {
+  width: 50%;
   text-align: center;
 }
 
-.item-cup {
-  border: solid 1px #fff3cd;
-  width: 100px;
-  height: 200px;
-  margin: 10px 0;
-  flex-shrink: 0;
+.bg-dark {
+  background-color: #4d3e3e;
 }
 
 /* Navbar */
 .navbar {
-  color: #ff926b;
-  font-size: 1.8rem;
-  padding: 20px;
+  color: #fff3cd;
+  font-size: 1.2rem;
+  padding: 40px 0;
 }
+
 .navbar h1 {
   float: left;
+  color: #fff3cd;
 }
 
 .navbar ul {
   float: right;
-  list-style: none;
 }
 
 .navbar ul li {
   float: left;
+  padding: 10px 20px 0;
 }
 
 .navbar ul li a {
+  
+}
+
+.navbar ul li a:hover {  
   color: #ff926b;
-  padding: 30px;
 }
 
-.navbar ul li a:hover {
-  background-color: #ff926b;
-  color: #fff3cd;
-}
-
-/* Welcome */
+/* Header */
 .welcome {
+  height: 80vh;
   padding-top: 50px;
-  text-align: center;
+  text-align: left;
+  margin: 300px 115px 0;
 }
 .welcome h1 {
-  color: #ffc38b;
-  font-family: 'Pacifico', cursive;
   font-size: 9rem;
 }
 
@@ -155,75 +107,54 @@ h4 {
   font-size: 6rem;
 }
 
-/* Coffee Main */
-.coffee-main {
-  float: left;
-  margin-left: 100px;
+/* Process */
+.process img {
+  order: 2;
 }
 
-.coffee-main p {
-  font-size: 2.5rem;
-  padding: 30px;
+.process .chapter-text {
+  order: 1;
 }
 
-/* Coffee Menu */
-/* Espresso */
-#espresso .air {
-  height: 70%;
+/* Menu */
+.menu {
+  padding-bottom: 50px;
 }
 
-#espresso .espresso {
-  height: 30%;
+.menu h2 {
+  margin-left: 40px;
+  color: #000;
 }
 
-/* Ristretto */
-#ristretto .air {
-  height: 80%;
+.flex-container {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  margin: 0 800px 0 30px;
+  
 }
 
-#ristretto .espresso {
-  height: 22%;
+.item {
+  margin: 10px;
+  padding: 20px;
+  text-align: center;
+  border: solid 2px #fff3cd;
+  border-radius: 10px;
+  /* background-color: #4d3e3e; */
 }
 
-/* Macchiato */
-#macchiato .air {
-  height: 20%;
-}
-
-/* Cappuccino */
-#cappuccino .item-cup .foamed-milk,
-#cappuccino .item-cup .steamed-milk{
-  height: 30%;
-}
-
-/* Cafe Latte */
-#latte .item-cup .foamed-milk {
-  height: 20%;
-}
-#latte .item-cup .steamed-milk {
-  height: 40%;
-}
-
-/* Viennois */
-#viennois .item-cup .hot-milk,
-#viennois .item-cup .whipped-cream {
-  height: 30%;
-}
-
-/* Mocha Breve */
-#mocha-breve .item-cup .half {
-  height: 30%;
-}
-
-/* Mocha */
-#mocha .item-cup .chocolate {
-  height: 40%;
-}
-#mocha .item-cup .steamed-milk {
-  height: 20%;
+.vector-img {
+  height: 200px;
+  width: 200px;
+  margin: 10px;
+  border-radius: 10px;
+  /* TEMP */
+  background-color: #ff926b;;
+  
 }
 
 /* Footer */
 footer {
   text-align: center;
+  margin: 20px;
 }
