--- a/css/styles.css
+++ b/css/styles.css
@@ -17,14 +17,9 @@ a {
   margin: 0 10px;
 }
 
-header {
-  background: url('https://images.unsplash.com/photo-1509785307050-d4066910ec1e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1228&q=80')no-repeat center center/cover;
-  height: 100vh;
-}
-
 h1 {
   font-weight: 700;
-  font-size: 4.5rem;
+  font-size: 5.5rem;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -48,7 +43,7 @@ li {
 }
 
 .content {
-  padding-top: 20%;
+  padding-top: 25%;
   text-align: center;
 }
 
@@ -64,6 +59,21 @@ li {
   padding: 0;
   max-width: 100%;
   margin: 3% auto;
+}
+
+/* Header */
+header {
+  background: url('https://images.unsplash.com/photo-1509785307050-d4066910ec1e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1228&q=80')no-repeat center center/cover;
+  height: 100vh;
+  position: relative;
+}
+
+.overlay {
+  background: rgba(37, 42, 46, 0.6) ;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
 /* Coffee Info */
